[gd_scene load_steps=8 format=3 uid="uid://ce2suto2wkfms"]

[ext_resource type="Script" path="res://Nodes/Menus/destination_menu.gd" id="1_grf08"]
[ext_resource type="Texture2D" uid="uid://jghqwu5vts" path="res://Assets/GUI_Icons/Arrow_Up.png" id="1_lu4ni"]
[ext_resource type="Texture2D" uid="uid://cek4f1qxniex2" path="res://Assets/GUI_Icons/Arrow_Down.png" id="2_dpm3i"]
[ext_resource type="Texture2D" uid="uid://um1k1tl2reub" path="res://Assets/GUI_Icons/MagnifyingGlass.png" id="3_b8ibx"]
[ext_resource type="Texture2D" uid="uid://ckd536xcx7hqa" path="res://Assets/GUI_Icons/Load_Icon.png" id="4_pksko"]
[ext_resource type="Texture2D" uid="uid://dylwk44agkrxr" path="res://Assets/GUI_Icons/Unload_Icon.png" id="5_n4uku"]
[ext_resource type="Texture2D" uid="uid://bhqa5hmpw7nvo" path="res://Assets/GUI_Icons/Red_X.png" id="6_4vjfi"]

[node name="DestinationMenu" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grf08")

[node name="ArrowsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonUp" type="Button" parent="ArrowsContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("1_lu4ni")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonDown" type="Button" parent="ArrowsContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("2_dpm3i")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonFind" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_b8ibx")
icon_alignment = 1
expand_icon = true

[node name="LabelName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "label"
vertical_alignment = 1

[node name="IconsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadIcon" type="TextureRect" parent="IconsContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_pksko")
stretch_mode = 5

[node name="UnloadIcon" type="TextureRect" parent="IconsContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_n4uku")
stretch_mode = 5

[node name="ButtonRemove" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("6_4vjfi")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="ArrowsContainer/ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="ArrowsContainer/ButtonDown" to="." method="_on_button_down_pressed"]
[connection signal="pressed" from="ButtonFind" to="." method="_on_button_find_pressed"]
[connection signal="pressed" from="ButtonRemove" to="." method="_on_button_remove_pressed"]
